added a div in hero sectoin for position property

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <div class="hero_img">
         <img src="./assets/images/01.png" alt="">
       </div>
+      <div class="overview_box">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, earum ratione fugit enim repudiandae doloremque provident eligendi. Atque libero, quo harum sed, dolorem molestiae repellendus perferendis, earum esse in incidunt.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, earum ratione fugit enim repudiandae doloremque provident eligendi. Atque libero, quo harum sed, dolorem molestiae repellendus perferendis, earum esse in incidunt.</p>
+      </div>
     </section>
     <section class="container product">
 
